# robot_data_recorder

./: .env.example  .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
docs/: API.md  EXAMPLES.md  INTERNALS.md
scripts/: setup_env.sh
src/lerobot_isaac_recorder/: __init__.py  cli.py  config.py  d435.py  dual_writer.py  recorder.py  schema.py  so101_teleop.py
src/robot_data_recorder/: __init__.py  check_hardware.py  cli.py  config.py  d435.py  dual_writer.py  keylistener.py  recorder.py  schema.py  so101_teleop.py  view_camera.py
tests/: conftest.py  test_check_hardware.py  test_cli.py  test_config_env.py  test_dual_writer.py  test_imports.py  test_keylistener.py  test_recorder_keys.py  test_schema.py  test_training_completeness.py
