[project]
name = "lerobot-isaac-recorder"
version = "0.1.0"
description = "D435 camera + SO-101 teleop dual-write recorder for LeRobot Parquet + LeWM HDF5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "pyyaml>=6.0",
    # Workspace sibling — resolves via workspace editable install
    "lerobot-isaac-configs",
    # Soft-imported (not hard-pinned): pyrealsense2, lerobot, stable-worldmodel
]

[project.optional-dependencies]
realsense = ["pyrealsense2"]
lerobot = ["lerobot"]
worldmodel = ["stable-worldmodel"]
all = ["pyrealsense2", "lerobot", "stable-worldmodel"]

[project.scripts]
lerobot-isaac-record = "lerobot_isaac_recorder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_isaac_recorder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
