[project]
name = "robot-data-recorder"
version = "0.1.0"
description = "D435 camera + SO-101 teleop dual-write recorder for LeRobot Parquet + LeWM HDF5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "pyyaml>=6.0",
    # NOTE: sibling `lerobot-isaac-configs` is NOT listed — pixi installs it as editable
    # workspace dep via root pixi.toml pypi-dependencies. See [monorepo] extra.
    # Soft-imported (not hard-pinned): pyrealsense2, lerobot, stable-worldmodel
]

[project.optional-dependencies]
realsense = ["pyrealsense2"]
lerobot = ["lerobot"]
worldmodel = ["stable-worldmodel"]
all = ["pyrealsense2", "lerobot", "stable-worldmodel"]
monorepo = ["lerobot-isaac-configs"]

[project.scripts]
robot-data-record = "robot_data_recorder.cli:main"
robot-data-check = "robot_data_recorder.check_hardware:main"
robot-data-view = "robot_data_recorder.view_camera:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_data_recorder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
